:v1_4_0: {base}/compare/v1.3.0\...v1.4.0[v1.4.0]
:v1_4_1: {base}/compare/v1.4.0\...v1.4.1[v1.4.1]
:v1_4_2: {base}/compare/v1.4.1\...v1.4.2[v1.4.2]
:v1_4_3: {base}/compare/v1.4.2\...v1.4.3[v1.4.3]
:v1_5_0: {base}/compare/v1.4.3\...v1.5.0[v1.5.0]
:v1_5_1: {base}/compare/v1.5.0\...v1.5.1[v1.5.1]
:v1_6_0: {base}/compare/v1.5.1\...v1.6.0[v1.6.0]
:v1_6_1: {base}/compare/v1.6.0\...v1.6.1[v1.6.1]
:unreleased: {base}/compare/v1.5.1\...HEAD[Unreleased]

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.1.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== {unreleased}

This section tracks upcoming changes that are not yet released.

== {v1_6_1}

=== Added

* Badges to Antora documentation.

== {v1_6_0}

=== Added

* Ansible galaxy related badges to README.

=== Changed

* Improved changelog version link structure.
* Link to workflows from Github action badges.

=== Fixed 

* Github comparison links rendering correctly.
* Ansible minimum version identifier.

== {v1_5_1}

=== Fixed

* Add navigation to `antora.yml`.

== {v1_5_0}

=== Added

* Changelog page to documentation.
* Navigation to documentation.

=== Changed

* Only reference a common contribution guide.

== {v1_4_3}

=== Fixed

* Removed redundant debug statements from `post_gen` hooks.

== {v1_4_2}

=== Fixed

* Removed redundant paths in `_copy_without_render` list.

== {v1_4_1}

=== Added

* Trigger DAG-OS pages generation on documentation changes.

=== Fixed

* Spelling of DAG-OS.

== {v1_4_0}

=== Added

* Antora documentation stubs.
* Symlink checking pre-commit hook.

=== Changed

* Replaced README contents with reference to Antora documentation.

== {v1_3_0}

=== Added

* Contribution guidelines.
* GitHub issue templates.
* GitHub pull request template.

== {v1_2_0}

=== Added

* Role description via cookiecutter.
* Verify dependencies are installed before generation.
