@@ -17,7 +17,8 @@
 :v1_5_1: {base}/compare/v1.5.0\...v1.5.1[v1.5.1]
 :v1_6_0: {base}/compare/v1.5.1\...v1.6.0[v1.6.0]
 :v1_6_1: {base}/compare/v1.6.0\...v1.6.1[v1.6.1]
-:unreleased: {base}/compare/v1.5.1\...HEAD[Unreleased]
+:v1_7_0: {base}/compare/v1.6.1\...v1.7.0[v1.7.0]
+:unreleased: {base}/compare/v1.7.0\...HEAD[Unreleased]
 
 All notable changes to this project will be documented in this file.
 
@@ -27,6 +28,13 @@ and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Version
 == {unreleased}
 
 This section tracks upcoming changes that are not yet released.
+
+== {v1_7_0}
+
+=== Fixed
+
+* Run CI actions on version branches.
+* Run Molecule tests on scheduled executions.
 
 == {v1_6_1}
 
